pulumi config, imports cognito and api

--- a/Pulumi.dev.yaml
+++ b/Pulumi.dev.yaml
@@ -1,4 +1,5 @@
 encryptionsalt: v1:D3k/BX6/LGE=:v1:UcrVbzS7ozbz+6CW:Cvun5zF0ahiKnzNHXlbZ4U8KeBVW8Q==
 config:
   aws-crud-lambda:lambda_name: lambda-crud
+  aws-crud-lambda:stage: dev
   aws:region: eu-central-1
